--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRESQL_PORT_NUMBER}/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
 server.error.include-stacktrace=never
+jwt.secret=${APIVENDAS_AUTH_SECRET}
+application.version=@project.version@
+
